# coding_solutions

./: CMakeLists.txt  C_PYTHON_ALGORITHMS.cpp  README.md  codingPrep.code-workspace  env.sh  interviewQuestionsToBeAsked.txt  logging_config.json
C/: CMakeLists.txt  addTwoNumbersNoSignOperator.c  reverseNumberDigits.c  standardHeaders.h  version.h
C/BFS/: 102_binaryTreeLevelOrderTraversal.c  102_binaryTreeLevelOrderTraversalQueue.c  103_binaryTreeZipZagLevelOrderTraversalQueue.c  107_binaryTreeLevelOrderTraversal2Queue.c  200_numberOfIslandsBFS.c  286_wallsAndGatesBFS.c  317_shortestDistanceFromAllBuildings.c  317_shortestDistanceFromAllBuildingsBFS.c  733_floorFill.c  993_cousinsInBinaryTreeQueue.c  994_rottingOrangesBFS.c
C/Backtracking/: 31_nextPermutation.c  46_permutations.c  47_permutations2.c
C/Basics/: BST.txt  FTL.txt  PropertiesOfNumbers.txt  basicsOfPointers.txt  bootloader.txt  mutexLocks  mutexLocks.c  propertiesOfSquares.txt
C/BinarySearch/: 33_searchInSortedRotatedArray.c  34_findFirstAndLastPositionOfElementInSortedArray.c  35_searchInsertPosition.c  367_validPerfectSquare.c  410_splitArrayLargetsSum.c  528_randomPickWithWeight.c  633_sumOfSquareNums.c  69.sqrt.c  74_search2DMatrix.c  875_kokoEatingBananas.c  findMinNumSortedArray.c  singleNumber.c  usefulDetails.txt
C/BitwiseOperations/: 393_UTF8Validation.c  absoluteNumber.c  addTwoNumbersNoSignOperator  allHeaders.h  countTotal1sBitsInNumber.c  hasAlternatingBits.c  incrementWithoutPlusOperator.c  isPowerOfFour.c  multipluTwoNumbersNoMultiplyOperator.c  reverseNumberBits.c  rightmostSetBit.c  steganography.c
C/DFS/: 112_pathSum.c  124_maximumBinaryTreePathSumDFS.c  130_surroundedRegions.c  145_binaryTreePostOrderTraversal.c  145_binaryTreePostOrderTraversalStack.c  200_numberOfIslandsDFS.c  230_kthSmallestElementInBSTStack.c  486_predictTheWinner.c  559_maximumDepthOfN-aryTreeDFS.c  572_subtreeOfAnotherTree.c  671_secondMinimumNodeInABinaryTree.c  94_binaryTreeInOrderTraversal.c
C/Design/: 239_slidingWindowMaximum.c  fileSystemDesign.c  producerConsumerProblem.c  touchISR.c  touchISRDrawUtility.c
C/DynamicProgramming/: 1135_minimumDifficultyOfAJobSchedule.c  121_bestTimeToBuyAndSellStocks.c  139_wordBreakDP.c  221_maximalSquare.c  304_RangeSumQuery2D_Immutable.c  42_TrappingRainWaterDP.c  53_maximumSubarray.c  62_uniquePaths.c  64_minimumPathSum.c  746_minCostClimbingStairs.c  85_maximalRectangle.c
C/ImplementYourOwn/: memAlign.c  myASCIIToInt  myASCIIToInt.c  myBinStrToHexStr.c  myItoA.c  myLittleEndianToBigEndian.c  myMalloc.c  myMallocSimple.c  myMemCopyOptimized.c  myMemset.c  myMemsetOptimized.c  myStackGrowDirection.c  myStrCopyOptimized.c  myStrcat.c  myStrstr.c
C/LeetCode/: 1004_maxConsecutiveOnes.c  100_sameTree.c  1010_pairOfSongsDivisibleBy60.c  1011_capacityToShipPackagesWithinDDays.c  101_symmetricTree.c  102_binaryTreeLevelOrderTraversal.c  102_binaryTreeLevelOrderTraversalQueue.c  103_binaryTreeZipZagLevelOrderTraversalQueue.c  104_maximumDepthOfBinaryTree.c  105_constructBinaryTreeFromPreOrderInOrderTraversal.c  106_constructBinaryTreeFromPostOrderInOrderTraversal.c  107_binaryTreeLevelOrderTraversal2Queue.c  1099_twoSumLessThanK.c  111_minimumDepthOfTree.c  1135_minimumDifficultyOfAJobSchedule.c  1137_nThTribonacciNumber.c  121_bestTimeToBuyAndSellStocks.c  121_linkedListCycle.c  122_bestTimeToBuyAndSellStock2.c  1231_divideChocolate.c  1237_findPositiveIntegerSolutionForGivenEquation.c  123_bestTimeToBuyAndSellStock3.c  124_maximumBinaryTreePathSumDFS.c  125_validPalindrome.c  1306_jumpGame3.c  130_surroundedRegionsDFS.c  1342_NumberOfStepsToReduceNumberToZero.c  139_wordBreakDP.c  1423_maximumPointsYouCanObtainFromCards.c  1428_leftMostColWithAtLeastOne.c  142_linkedListCycle2.c  1431_kidWithMaxCandies.c  145_binaryTreePostOrderTraversal.c  145_binaryTreePostOrderTraversalStack.c  1480_sumOf1DArray.c  151_reverseWordsInAString.c  152_maximumSubArrayProduct.c  1539_KthMissingPositiveNum_1.c  1539_KthMissingPositiveNum_2.c  157_readNCharactersGivenRead4.c  (+113 more)
C/LinkedList/: 138_copyListWithRandomPointer.c
C/Macros/: interestingMacros.c
C/Mathematics/: 239_perfectSquares.c  Pe_Problem7.c  Pe_Problem8.c  fibbonacciSeries.c  mathematics_headers.h  printAllFractionsUnderGivenNumberN.c  reverse64BitInteger.c  square_root.c
C/MaxHeap/: 358_rearrangeStringKDistanceApart.c  767_rearrangeStringMaxHeap.c
C/Multithreaded/: 1195_fizzBussMultithreaded_1.c  1195_fizzBussMultithreaded_2.c  1195_fizzBuzzMultithreaded_1.c  1195_fizzBuzzMultithreaded_2.c  1195_fizzBuzzMultithreaded_3.c  produceConsumerVirtualMemory.c  producerConsumerProblem.c  pthread_notes 2.txt  touchISRDrawUtility.c
C/SampleExamples/: FB_Puzzle_2 2.c  FB_Puzzle_3.c  FB_Puzzle_4 2.c  mutexes1 2.c
C/Stack/: 42.trappingRainWater.c  42.trappingRainWaterStack.c  84_largestRectangleInHistoram.c
C/StringManipulation/: 1153_transformStringIntoAnother.c  125_validPalindrome.c  1294_minimumRemoveToMakeValidParanthesis.c  151_reverseWordsInAString.c  242_validAnagram.c  32_longestValidParanthesis.c  340_longestSubstringWithAtMostKDistinctCharacters.c  340_longestSubstringWithAtMostKDistinctCharactersSolution2.c  340_longestSubstringWithAtMostKDistinctCharactersSolution3.c  3_lengthOfSubStringWithoutRepeatingCharacters.c  5_longestPalindromicSubString.c  680_validPalindrome2.c  727_minimumWindowSubsequence.c  763_paritionLable.c  76_minimumWindowSubstring.c  937_reorderDataInLogFiles.c  953_verifyingAnAlienDictionary.c  addTwoNumbers.c  encoding.c  longestPalindromicSubstring.c  swapTwoStrings.c
C/TwoPointer/: 42_TrappingRainWaterTP.c  5_longestPalindromicSubString.c
C/binarySearch/: 1231_divideChocolate.c  240_search2DMatrix2.c  278_firstBadVersion.c  34_findFirstAndLastPositionOfElementInSortedArray.c  410_splitArrayLargetsSum.c  528_randomPickWithWeight.c  74_search2DMatrix.c  findMinNumSortedArray.c  isBadVersion.c  square_reoot.c  square_root.c
C/bitwiseOperations/: 393_UTF8Validation.c  NumberOfStepsToReduceNumberToZero.c  addTwoNumbersNoSignOperator.c  countTotal1sBitsInNumber.c  evenOrOdd.c  findTheDifference.c  (+6 more)
(+270 files in other folders)
