cmake_minimum_required(VERSION 3.14)

include_directories(${c_python_algorithm_SOURCE_DIR}/C)
link_directories(${c_python_algorithm_BINARY_DIR}/C)

add_subdirectory(Backtracking)
add_subdirectory(Basics)
add_subdirectory(BinarySearch)
add_subdirectory(BitwiseOperations)
add_subdirectory(Design)
add_subdirectory(DFS)
add_subdirectory(DynamicProgramming)
add_subdirectory(ImplementYourOwn)
add_subdirectory(LeetCode)
add_subdirectory(LinkedList)
add_subdirectory(Macros)
add_subdirectory(Mathematics)
add_subdirectory(MaxHeap)
add_subdirectory(Multithreaded)
add_subdirectory(Stack)
add_subdirectory(StringManipulation)
add_subdirectory(TwoPointer)
add_subdirectory(utils)
